[package]
name = "macros"
version = "0.0.1"
authors = [
    "Thiago Machado <thiago@keyko.io>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0.0", features = ["full", "fold", "extra-traits", "visit"] }
quote = "1.0"
